--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "http-server ./dist",
+    "build": "babel-node ./test/app.js",
+    "start": "babel-node livereload",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -22,6 +23,10 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-function-bind": "^6.8.0",
     "babel-preset-es2015": "^6.14.0",
-    "babel-preset-stage-0": "^6.5.0"
+    "babel-preset-stage-0": "^6.5.0",
+    "chokidar": "^1.6.0",
+    "connect": "^3.4.1",
+    "livereload": "^0.5.0",
+    "serve-static": "^1.11.1"
   }
 }
