--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "handlebars-helpers": "^0.7.5",
     "he": "^1.1.0",
     "lodash": "^4.15.0",
-    "marked": "^0.3.6"
+    "marked": "^0.3.6",
+    "nedb": "^1.8.0",
+    "promiseify": "^0.2.0"
   },
   "devDependencies": {
     "babel-plugin-transform-class-properties": "^6.11.5",
