--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
   "dependencies": {
     "babel-cli": "^6.14.0",
     "fs-extra": "^0.30.0",
+    "glob-fs": "^0.1.6",
+    "glob-fs-gitignore": "^0.1.5",
     "handlebars": "^4.0.5",
     "handlebars-helpers": "^0.7.5",
     "he": "^1.1.0",
     "lodash": "^4.15.0",
     "marked": "^0.3.6",
     "nedb": "^1.8.0",
-    "promiseify": "^0.2.0"
+    "promiseify": "^0.2.0",
+    "require-text": "0.0.1"
   },
   "devDependencies": {
     "babel-plugin-transform-class-properties": "^6.11.5",
@@ -35,6 +38,7 @@
     "gulp-copy": "0.0.2",
     "gulp-deploy-git": "^0.5.3",
     "gulp-sequence": "^0.4.6",
+    "gulp-util": "^3.0.7",
     "livereload": "^0.5.0",
     "require-dir": "^0.3.0",
     "rfc822-date": "git+https://github.com/tjconcept/js-rfc822-date.git",
